[package]
name = "opencore-amrnb"
# Matches the upstream opencore-amr release we vendor (0.1.6, Sept 2017 —
# the last tagged release). If we ever apply local changes on top of the
# emcc build glue we bump with semver build metadata (e.g. `0.1.6+vt.1`).
version = "0.1.6"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
description = "Vendored opencore-amr-nb (Apache 2.0, by Martin Storsjö / PacketVideo) compiled to a standalone WebAssembly artifact via Emscripten. Source under `vendor/` is unmodified upstream — see `vendor/LICENSE`. Native (non-wasm32) builds are a no-op; consumers keep their existing libopencore-amrnb system link unaffected."
repository = "https://github.com/voicetastic/opencore-amrnb"
homepage = "https://github.com/voicetastic/opencore-amrnb"
documentation = "https://docs.rs/opencore-amrnb"
readme = "README.md"
keywords = ["amr", "amr-nb", "codec", "wasm", "emscripten"]
categories = ["multimedia::audio", "wasm", "external-ffi-bindings"]
# Explicit allowlist so `cargo package` produces a minimal, reproducible
# archive. Excludes nothing — the vendor/ tree contains only headers and
# .cpp we actually compile — but pinning what we publish protects against
# stray local files (e.g. editor scratch) sneaking into a release.
include = [
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "vendor/**/*.cpp",
    "vendor/**/*.c",
    "vendor/**/*.h",
    "vendor/**/*.sym",
    "vendor/LICENSE",
]

# No public API for native consumers — the desktop / Android path keeps its
# existing `#[link(name = "opencore-amrnb")]` system link. This crate exists
# to host the wasm build artifact, exposed via `wasm_module_bytes()` on
# wasm32. Native builds are a no-op (build.rs returns early).
[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
# Build for both targets so `wasm_module_bytes()` lands in the docs with
# an "Available on wasm32 only" badge, and the native (no-op) view is
# also rendered. Default target is x86_64-unknown-linux-gnu; adding
# wasm32-unknown-unknown surfaces the wasm-gated public API.
targets = ["wasm32-unknown-unknown", "x86_64-unknown-linux-gnu"]
